# ops/api/gzhcommittee_serverswagger.yaml
@@ -139,6 +139,28 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AllMemberResponse'
+  /member/member/{id}:
+    get:
+      tags:
+        - Member
+      summary: 查询member的选票
+      description: 查询member的选票
+      security:
+        - Bearer: []
+      parameters:
+        - name: id
+          in: path
+          description: 'The contract id that needs to be fetched.'
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+        '400':
+          description: 请求不正确
+        '404':
+          description: Account not found
   /proposal/createTx:
     post:
       tags:
