# src/routers/member.router.ts
@@ -5,7 +5,7 @@ import { IUserInfo } from '../interfaces/user';
 import { MspWrapper } from '../services/MspWrapper';
 import { FabricService } from '../services/FabricService';
 import { getResponse } from '../utils/Response';
-import { IInitMemberRequest , ICheckValidityRequest} from '../interfaces/member';
+import { IInitMemberRequest , ICheckValidityRequest, IQueryMemberRequest} from '../interfaces/member';
 
 const LOG = debug('GZHCommittee_Server:router');
 
@@ -21,6 +21,7 @@ class MemberRouter {
     this.router.post('/init', this.initMember);
     this.router.post('/checkValidity', this.checkValidity);
     this.router.get('/getAllMember', this.getAllMember);
+    this.router.get('/member/:id', this.queryMember);
   }
 
   public async initMember(req: Request, res: Response) {
@@ -115,6 +116,39 @@ class MemberRouter {
       const fabricService = new FabricService();
       const bcResp = await fabricService.invoke('member.getall', [ ], registry);
       res.status(200).send(getResponse(true, 'Success', bcResp));
+    } catch (e) {
+      LOG('%s - Error: ', method, e);
+      res.status(500).send(getResponse(false, e.message));
+    }
+  }
+  public async queryMember(req: Request, res: Response, next: NextFunction) {
+    const method = 'queryMember';
+    try {
+      LOG('%s - Enter.', method);
+      LOG('%s - request params: %O', method, req.params);
+
+      const queryMemberRequest: IQueryMemberRequest = Validator.VALIDATE_QUERY_MEMBER_REQUEST(req.params);
+      LOG('%s - Request Body Validate Passed, query member request: %O', method, queryMemberRequest);
+
+      let userInfo: IUserInfo;
+      try {
+        userInfo = await MspWrapper.getUser((<any>req).token);
+        LOG('%s - Successfully get user info from MSP', method);
+      } catch (e) {
+        LOG('%s - Failed to chat with MSP error: %o', method, e);
+        if (e.code) {
+          return res.status(e.code).send(getResponse(false, e.message));
+        }
+        return res.status(400).send(getResponse(false, e.message));
+      }
+      LOG('%s - Successfully get user info from MSP', method);
+      const registry = await FabricService.createUserFromPersistance(userInfo.id, userInfo.privateKey, userInfo.certificate, userInfo.mspId);
+
+      const fabricService = new FabricService();
+      const bcResp = await fabricService.invoke('member.getOneVotes', [JSON.stringify(queryMemberRequest)], registry);
+
+      LOG('%s - Exit. 200', method);
+      res.status(200).send(getResponse(true, 'Successfully query member', bcResp));
     } catch (e) {
       LOG('%s - Error: ', method, e);
       res.status(500).send(getResponse(false, e.message));
